[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Menu and Credits/Title.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menu and Credits/Title_base.png" type="Texture" id=2]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Menu and Credits/play_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menu and Credits/play_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menu and Credits/play_buttom.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sounds/DefensePostHoover.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Menu and Credits/about_hoover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu and Credits/about_buttom.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu and Credits/about_pressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu and Credits/players.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menu and Credits/pizza.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu and Credits/coco.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu and Credits/tenis.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Players:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 107, -654 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pizza:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 396, -404 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Coco:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Tenis:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 691, -846 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Players2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 354, -268 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Players3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 980, -310 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Players4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 708, -464 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Coco:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -37, -196 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "cicle"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Players:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 107, -654 ), Vector2( 107, 868 ), Vector2( 107, -654 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pizza:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 396, -404 ), Vector2( 396, 460 ), Vector2( 396, -404 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tenis:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 691, -846 ), Vector2( 691, 981 ), Vector2( 691, -846 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Players2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.7, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 354, -268 ), Vector2( 354, 918 ), Vector2( 354, -268 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Players3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 980, -310 ), Vector2( 980, 770 ), Vector2( 980, -310 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Players4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 708, -464 ), Vector2( 708, 753 ), Vector2( 708, -464 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Coco:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 643, 1099 ), Vector2( -37, -196 ), Vector2( 643, 1099 ) ]
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.756863, 0.756863, 0.756863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationElements" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.556863 )

[node name="Players" type="Sprite" parent="AnimationElements"]
position = Vector2( 107, -654 )
texture = ExtResource( 11 )
hframes = 5

[node name="Pizza" type="Sprite" parent="AnimationElements"]
position = Vector2( 396, -404 )
texture = ExtResource( 12 )

[node name="Coco" type="Sprite" parent="AnimationElements"]
position = Vector2( -37, -196 )
texture = ExtResource( 13 )

[node name="Tenis" type="Sprite" parent="AnimationElements"]
position = Vector2( 691, -846 )
texture = ExtResource( 14 )

[node name="Players2" type="Sprite" parent="AnimationElements"]
position = Vector2( 354, -268 )
texture = ExtResource( 11 )
hframes = 4
frame = 1

[node name="Players3" type="Sprite" parent="AnimationElements"]
position = Vector2( 980, -310 )
texture = ExtResource( 11 )
hframes = 4
frame = 3

[node name="Players4" type="Sprite" parent="AnimationElements"]
position = Vector2( 708, -464 )
texture = ExtResource( 11 )
hframes = 4
frame = 2

[node name="Anim" type="AnimationPlayer" parent="AnimationElements"]
autoplay = "cicle"
playback_speed = 0.5
anims/RESET = SubResource( 1 )
anims/cicle = SubResource( 2 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Title" type="Sprite" parent="."]
position = Vector2( 258, 226 )
texture = ExtResource( 1 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 372.0
margin_top = 111.0
margin_right = 372.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="Buttons"]
anchor_left = -0.357
anchor_top = -0.178
anchor_right = 0.633
anchor_bottom = 0.81
margin_left = 655.568
margin_top = 162.8
margin_right = -154.192
margin_bottom = -336.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="TextureButton" parent="Buttons"]
anchor_left = -0.357
anchor_top = -0.178
anchor_right = 0.633
anchor_bottom = 0.81
margin_left = 655.568
margin_top = 264.8
margin_right = -154.192
margin_bottom = -234.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hover" type="AudioStreamPlayer" parent="Buttons"]
stream = ExtResource( 7 )
bus = "UI"

[connection signal="mouse_entered" from="Buttons/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Buttons/About" to="." method="_on_Play_mouse_entered"]
[connection signal="pressed" from="Buttons/About" to="." method="_on_About_pressed"]
